--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,11 @@
     "import"
   ],
   "rules": {
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "import/no-mutable-exports": 0,
+    "no-console": 0,
+    "consistent-return": 0,
+    "prefer-destructuring": 0,
+    "func-names": "off"
   }
 }
