--- a/.eslintrc
+++ b/.eslintrc
@@ -14,8 +14,10 @@
     "import/prefer-default-export": 0,
     "import/no-mutable-exports": 0,
     "no-console": 0,
+    "no-underscore-dangle": 0,
     "consistent-return": 0,
     "prefer-destructuring": 0,
+    "camelcase": 0,
     "func-names": "off"
   }
 }
