--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.143.0",
     "babel-loader": "^7.1.1",
     "babel-runtime": "^6.25.0",
     "bcrypt-nodejs": "0.0.3",
