fix: Some issues related to MongoDB connection and Lambda

--- a/config/env.example.yml
+++ b/config/env.example.yml
@@ -1,6 +1,8 @@
+local:
+  MONGODB_URI: 'mongodb://localhost:27017/talentspace'
+  SECRET_KEY: 'JWT_SECRET_KEY'
 dev:
   STAGE: 'dev'
   NODE_ENV: 'dev'
-  MONGODB_URI: 'mongodb://<USER>:<PASSWORD>@clusterdemo-shard-00-00-uvtko.mongodb.net:27017,clusterdemo-shard-00-01-uvtko.mongodb.net:27017,clusterdemo-shard-00-02-uvtko.mongodb.net:27017/talentspace?ssl=true&replicaSet=ClusterDemo-shard-0&authSource=admin'
+  MONGODB_URI: 'mongodb://<USER>:<PASSWORD>@clusterdemo-shard-00-00-uvtko.mongodb.net:27017/talentspace?ssl=true&replicaSet=ClusterDemo-shard-0&authSource=admin'
   SECRET_KEY: 'JWT_SECRET_KEY'
-  AWS_REGION: ap-southeast-1
