--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "consistent-return": 0,
     "prefer-destructuring": 0,
     "camelcase": 0,
+    "no-param-reassign": 0,
     "func-names": "off"
   }
 }
